--- a/node/node-4/docker-compose.yml
+++ b/node/node-4/docker-compose.yml
@@ -2,6 +2,12 @@ version: "3.9" # optional since v1.27.0
 services:
 db:
   image: mongo
-  restart: always
+  hostname: mongo-test
+  tty: true
+  stdin_open: true
+  restart: "unless-stopped"
+  environment:
+    MONGO_INITDB_ROOT_USERNAME: admin
+    MONGO_INITDB_ROOT_PASSWORD: admin
   ports:
-    - 27017:27017
+    - 27018:27017
