--- a/node/node-4/package.json
+++ b/node/node-4/package.json
@@ -4,11 +4,20 @@
   "description": "Создание REST API для управления сущностями приложения",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index",
+    "client": "cd ./client && npm run dev"
   },
   "author": "S. Rapoport",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.19"
   }
 }
