--- a/node/node-7/package.json
+++ b/node/node-7/package.json
@@ -29,18 +29,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.4",
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.5",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
