--- a/node/node-7/dockerFile
+++ b/node/node-7/dockerFile
@@ -1,16 +1,18 @@
-FROM nginx
+FROM node:lts-bullseye-slim
 
 # Create app directory
-WORKDIR /dist
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 
 # Instal pm2
 RUN npm install pm2 -g
+RUN npm i -g @nestjs/cli
 RUN npm ci
 
 # Копируем Клиент в Дист
-COPY ./src/Client /dist/
+COPY . /usr/src/app
 
-EXPOSE 8080
-CMD [ "node", "server.js" ]
+
+EXPOSE 3000
+CMD [ "pm2", "start", "main.js", "-i", "max" ]
