--- a/node/node-7/package.json
+++ b/node/node-7/package.json
@@ -18,6 +18,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:pm": "pm2 start dist/main.js -i max",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
