--- a/node/node-7/package.json
+++ b/node/node-7/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://github.com/STARGUS/rapoport-stas-otus#readme",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build && npm i pm2 -g",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:pm": "pm2 start dist/main.js -i max",
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
@@ -95,7 +95,6 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
